# naraAI

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  PRD.txt  README.md  package-lock.json  package.json
apps/nara-hud/: index.html  package.json  vite.config.ts
apps/nara-hud/src/: App.tsx  api.ts  styles.css  types.ts
apps/nara-hud/src-tauri/: Cargo.toml  tauri.conf.json
apps/nara-hud/src-tauri/capabilities/: default.json
apps/nara-hud/src-tauri/src/: main.rs
apps/nara-hud/src/hooks/: useSpeech.ts
crates/nara-cli/: Cargo.toml
crates/nara-cli/src/: main.rs
crates/nara-codex/: Cargo.toml
crates/nara-codex/src/: lib.rs
crates/nara-core/: Cargo.toml
crates/nara-core/src/: lib.rs
crates/nara-daemon/: Cargo.toml
crates/nara-daemon/src/: main.rs
crates/nara-policy/: Cargo.toml
crates/nara-policy/src/: lib.rs
crates/nara-protocol/: Cargo.toml
crates/nara-protocol/src/: lib.rs
crates/nara-store/: Cargo.toml
crates/nara-store/src/: lib.rs
crates/nara-tools/: Cargo.toml
crates/nara-tools/src/: lib.rs
crates/nara-voice/: Cargo.toml
crates/nara-voice/src/: lib.rs
crates/nara-windows/: Cargo.toml
crates/nara-windows/src/: lib.rs
docs/: ARCHITECTURE.md  ROADMAP.md  SECURITY.md  VOICE.md  WINDOWS_SETUP.md
examples/: config.example.toml  policy.example.toml
