[package]
name = "nara-daemon"
version = "0.1.1"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
futures-util.workspace = true
nara-codex = { path = "../nara-codex" }
nara-policy = { path = "../nara-policy" }
nara-protocol = { path = "../nara-protocol" }
nara-store = { path = "../nara-store" }
nara-tools = { path = "../nara-tools" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
